--- a/package.json
+++ b/package.json
@@ -11,9 +11,9 @@
     "cookie-parser": "^1.4.6",
     "cors": "^2.8.5",
     "dotenv": "^16.0.0",
+    "express": "^4.17.3",
     "express-session": "^1.17.2",
     "mongoose": "^6.2.2",
-    "pokedex-promise-v2": "^4.0.0",
     "react": "^17.0.2",
     "react-dom": "^17.0.2",
     "react-icons": "^4.3.1",
